--- a/index.css
+++ b/index.css
@@ -382,13 +382,16 @@ hr {
     font-size: 25px;
     margin-top: 25px;
     margin-right: 242px;
+    margin-bottom: 205px;
 }
 
 .top {
     border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    margin-left: 100%;
+    height: 80px;
+    width: 80px;
+    position: fixed;
+    right: 200px;
+    bottom: 25px;
 }
 
 .top:hover {
